--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1>Kemi C</h1>
             <div class="own_jumbo">
                 <p>
-                    Dette undervisningsmateriale til <b>Kemi C</b> er udviklet af et produktionsfællesskab mellem otte VUC’er til anvendelse på de deltagende skoler: Hf og VUC Nordsjælland, VUC Hvidovre-Amager, VUC Roskilde, Vestegnen HF & VUC, VUF, VUC Storstrøm, VUC Aarhus og Københavns VUC (KVUC).
+                    Dette undervisningsmateriale til <b>Kemi C</b> er udviklet af et produktionsfællesskab mellem otte VUC’er til anvendelse på de deltagende skoler: HF & VUC København Syd, HF & VUC Nordsjælland, Københavns VUC (KVUC), Vestegnen HF & VUC, Voksenuddannelsescenter Frederiksberg (VUF), VUC Aarhus, VUC Roskilde, VUC Storstrøm.
                 </p>
                 <a class="btn btn-default btn-lg" target="_blank" href="om_materialerne.html">Om materialerne</a>
             </div>
