--- a/om_materialerne.html
+++ b/om_materialerne.html
@@ -26,7 +26,7 @@
             D. 12-02-2016. TLY: læsbarheden øges hvis bredden reduceres, derfor er der indført 7 kolonner istedet for 8 kolonner i fullscreen visning. (NOTE: Font-family OpenSans, font-size: 14px).
         -->
         <div class="om_container col-sm-10 col-md-7 col-md-offset-2">  
-            <p>Dette undervisningsmateriale til Kemi C er udviklet af et produktionsfællesskab mellem otte VUC’er til anvendelse på de deltagende skoler: Hf og VUC Nordsjælland, VUC Hvidovre-Amager, VUC Roskilde, Vestegnen HF & VUC, VUF, VUC Storstrøm, VUC Aarhus og Københavns VUC (KVUC).</p>
+            <p>Dette undervisningsmateriale til Kemi C er udviklet af et produktionsfællesskab mellem otte VUC’er til anvendelse på de deltagende skoler: HF & VUC København Syd, HF & VUC Nordsjælland, Københavns VUC (KVUC), Vestegnen HF & VUC, Voksenuddannelsescenter Frederiksberg (VUF), VUC Aarhus, VUC Roskilde, VUC Storstrøm.</p>
             <h3>Introduktion til materialet</h3>
             <p>Dette undervisningsmateriale er udviklet til kemi på c-niveau, men kan selvfølgelig anvendes på andre niveauer også. </p>
             <p>
